# wasm-typst-studio-rs

./: Cargo.toml  Trunk.toml  package-lock.json  tailwind.css
.claude/: settings.json
examples/: example.typ
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
src/compiler/: mod.rs  typst.rs  worker.rs
src/components/: editor.rs  editor_tabs.rs  file_sidebar.rs  home_page.rs  mod.rs  package_manager.rs  preview.rs  project_manager.rs  settings_modal.rs
src/models/: file_tree.rs  mod.rs  project.rs
src/state/: app_state.rs
src/storage/: backend.rs  indexeddb.rs  migration.rs  mod.rs  server_api.rs  traits.rs
src/sync/: local_browser.rs  mod.rs  traits.rs
src/sync/gdrive/: auth.rs  client.rs  mod.rs
