[package]
name = "wasm-typst-studio-rs"
version = "0.1.0"
edition = "2021"
authors = ["dio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Storage",
    # Clipboard API (requires web_sys_unstable_apis)
    "Navigator",
    "Clipboard",
    # IndexedDB for storage
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "IdbTransactionMode",
    "IdbCursorDirection",
    "DomStringList",
    # Drag and drop
    "DragEvent",
    "DataTransfer",
    # Touch/wheel events for preview gestures
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "AddEventListenerOptions",
    # Media queries for system theme detection
    "MediaQueryList",
    "MediaQueryListEvent",
    # Fetch API for server storage
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "RequestMode",
    # Web Workers for off-thread compilation
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "NodeList",
    "HtmlScriptElement",
] }
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Base64 decoding for images
base64 = "0.22"

# For typst package spec construction
ecow = "0.2"

# Typst compilation
typst-as-lib = { git = "https://github.com/Relacibo/typst-as-lib", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst = "0.14"
typst-svg = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"

[dev-dependencies]
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Rimuovi debug symbols per ridurre bundle size
